--- a/demo/index.html
+++ b/demo/index.html
@@ -182,7 +182,7 @@
         <div class="carousel-item active">
           <img src="./imgs/business/354-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
           <div class="carousel-caption d-none d-md-block">
-            <h4>American</h4>
+            <h4>America</h4>
             <p> </p>
           </div>
         </div>
@@ -196,7 +196,7 @@
         <div class="carousel-item">
           <img src="./imgs/business/857-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
           <div class="carousel-caption d-none d-md-block">
-            <h4>American</h4>
+            <h4>America</h4>
             <p> </p>
           </div>
         </div>
