--- a/demo/index.html
+++ b/demo/index.html
@@ -226,9 +226,9 @@
       <!-- areaTxt -->
       <div class="visual_areaTxt">
         <div class="visual_inner">
-          <h1 class="visual_title caps"><b>A Plus For Your Business</b>
+          <h1 class="visual_title caps"><b data-i18n-text="carousel_title"></b>
           </h1>
-          <p class="visual_text">Bizplus Corporation was established in September 2015. 
+          <p class="visual_text" data-i18n-text="carousel_content"> 
           </p>
         </div>
       </div>
