--- a/demo/index.html
+++ b/demo/index.html
@@ -637,32 +637,33 @@
     <!-- web-end -->
     <div class="web-end">
       <!-- map -->
-      <div class="map fc">
-        <div class="map-inner">
-          <div class="map-container fc ">
+      <div class="map-container">
             <div class="map-height z100">
               <div id="map"></div>
             </div>
           </div>
+
+      <div class="map fc">
+        <div class="map-inner">
+          
           <div class="map-content z100">
-            <div class="content-text z100">
-              <h2 data-i18n-text="address"></h2>
-              <p data-i18n-text="address_1"></p>
-              <p data-i18n-text="address_2"></p>
-              <b data-i18n-text="tel"></b>
-              <br>
-              <b data-i18n-text="fax"></b>
-              <div><a href="#" class="caps clear-a" data-i18n-text="more"></a></div>
-            </div>
+            
           </div>
         </div>
       </div>
       <!-- double footer -->
-      <footer class="footer bg-dark-blue fc">
+      <footer class="footer  fc">
         <div class="footer-inner rel  ">
-          <h1 style="color:#fff;">Bizplus</h1>
           <div class="footer__wrapper">
-            <ul class="footer__links c-white ">
+            <div class="content-text">
+                <h2 data-i18n-text="address"></h2>
+                <p data-i18n-text="address_1"></p>
+                <p data-i18n-text="address_2"></p>
+                <b data-i18n-text="tel"></b>
+                <br>
+                <b data-i18n-text="fax"></b>
+            </div>
+            <!--<ul class="footer__links c-white ">
               <li>
                 <h6 class="caps" data-i18n-text="information"></h6>
                 <ul class="footer__sublinks">
@@ -701,12 +702,12 @@
               <li>
                 <h6 class="caps" data-i18n-text="contact_us"></h6>
               </li>
-            </ul>
+            </ul>-->
             <div class="footer__newsletter c-white x">
-              <h6 class="caps">Keep up with Bizplus</h6>
+              <h6 >Keep up with Bizplus</h6>
               <p class="h6">A Plus For Your Business.</p>
               <div class="footer-from rel">
-                <form class="newsletter rel bg-dark-blue is-light">
+                <form class="newsletter rel ">
                   <input type="email" class="reader" id="email" name="email" placeholder="Your email">
                   <button>
                     <i class="fas fa-arrow-right fade-out"></i>
@@ -723,11 +724,11 @@
             <ul class="colophon__links c-white">
               <li><span>©
                   <!-- -->2019
-                  <!-- --> Clare, Inc.</span></li>
+                  <!-- --> Bizplus, Inc.</span></li>
               <li>
                 <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
               <li>
-                <a href="/" class="fade-out"> Design by XQ.</a></li>
+                <a href="/" class="fade-out"> xxx.</a></li>
             </ul>
             <ul class="colophon__social f aic x c-white">
               <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
