--- a/demo/index.html
+++ b/demo/index.html
@@ -251,7 +251,7 @@
             <b data-i18n-text="efficient"></b>
           </div>
           <div class="about-icon-item">
-            <div><img src="./imgs/svg/nice.svg"></div>
+            <div><img src="./imgs/svg/nice1.svg"></div>
             <b data-i18n-text="quality"></b>
           </div>
         </div>
