--- a/demo/index.html
+++ b/demo/index.html
@@ -193,23 +193,35 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./imgs/business/354-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
-            <div class="carousel-caption d-none d-md-block">
-              <h4>America</h4>
-              <p> </p>
+            <div class="carousel-caption ">
+              <!-- areaTxt -->
+              <h1 class="visual_title caps"><b data-i18n-text="carousel_1_title"></b>
+              </h1>
+              <p class="visual_text" data-i18n-text="carousel_1_content">
+              </p>
+              <!-- areaTxt -->
             </div>
           </div>
           <div class="carousel-item">
             <img src="./imgs/business/418-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
-            <div class="carousel-caption d-none d-md-block">
-              <h4>Tokyo</h4>
-              <p> </p>
+            <div class="carousel-caption">
+              <!-- areaTxt -->
+              <h1 class="visual_title caps"><b data-i18n-text="carousel_2_title"></b>
+              </h1>
+              <p class="visual_text" data-i18n-text="carousel_2_content">
+              </p>
+              <!-- areaTxt -->
             </div>
           </div>
           <div class="carousel-item">
             <img src="./imgs/business/857-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
-            <div class="carousel-caption d-none d-md-block">
-              <h4>America</h4>
-              <p> </p>
+            <div class="carousel-caption">
+              <!-- areaTxt -->
+              <h1 class="visual_title caps"><b data-i18n-text="carousel_3_title"></b>
+              </h1>
+              <p class="visual_text" data-i18n-text="carousel_3_content">
+              </p>
+              <!-- areaTxt -->
             </div>
           </div>
         </div>
@@ -222,16 +234,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <!-- areaTxt -->
-      <div class="visual_areaTxt">
-        <div class="visual_inner">
-          <h1 class="visual_title caps"><b data-i18n-text="carousel_title"></b>
-          </h1>
-          <p class="visual_text" data-i18n-text="carousel_content"> 
-          </p>
-        </div>
-      </div>
-      <!-- areaTxt -->
+
     </div>
     <!-- carousal -->
     <!-- about us -->
@@ -638,30 +641,30 @@
     <div class="web-end">
       <!-- map -->
       <div class="map-container">
-            <div class="map-height z100">
-              <div id="map"></div>
-            </div>
-          </div>
+        <div class="map-height z100">
+          <div id="map"></div>
+        </div>
+      </div>
 
       <div class="map fc">
         <div class="map-inner">
-          
+
           <div class="map-content z100">
-            
+
           </div>
         </div>
       </div>
       <!-- double footer -->
-      <footer class="footer  fc">
+      <footer class="footer fc">
         <div class="footer-inner rel  ">
           <div class="footer__wrapper">
             <div class="content-text">
-                <h2 data-i18n-text="address"></h2>
-                <p data-i18n-text="address_1"></p>
-                <p data-i18n-text="address_2"></p>
-                <b data-i18n-text="tel"></b>
-                <br>
-                <b data-i18n-text="fax"></b>
+              <h2 data-i18n-text="address"></h2>
+              <p data-i18n-text="address_1"></p>
+              <p data-i18n-text="address_2"></p>
+              <b data-i18n-text="tel"></b>
+              <br>
+              <b data-i18n-text="fax"></b>
             </div>
             <!--<ul class="footer__links c-white ">
               <li>
@@ -704,7 +707,7 @@
               </li>
             </ul>-->
             <div class="footer__newsletter c-white x">
-              <h6 >Keep up with Bizplus</h6>
+              <h6>Keep up with Bizplus</h6>
               <p class="h6">A Plus For Your Business.</p>
               <div class="footer-from rel">
                 <form class="newsletter rel ">
@@ -726,23 +729,21 @@
                   <!-- -->2019
                   <!-- --> Bizplus, Inc.</span></li>
               <li>
-                <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
+                <a href="#" class="fade-out"> Terms &amp; HZNU</a></li>
               <li>
-                <a href="/" class="fade-out"> xxx.</a></li>
+                <a href="#" class="fade-out"> xxx.</a></li>
             </ul>
             <ul class="colophon__social f aic x c-white">
-              <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
+              <li><a class="fade-out" href="#">
                   <i class="fab fa-line"></i>
                 </a>
               </li>
-              <li><a class="fade-out" href="https://twitter.com/clarepaint" target="_blank">
+              <li><a class="fade-out" href="#">
                   <i class="fab fa-twitter-square"></i>
                 </a></li>
-              <li><a class="fade-out" href="https://instagram.com/clarepaint" target="_blank"><i
-                    class="fab fa-facebook-square"></i></a>
+              <li><a class="fade-out" href="#"><i class="fab fa-facebook-square"></i></a>
               </li>
-              <li><a class="fade-out" href="https://pinterest.com/clare_paint" target="_blank"><i
-                    class="fab fa-weixin"></i></a></li>
+              <li><a class="fade-out" href="#"><i class="fab fa-weixin"></i></a></li>
             </ul>
           </div>
         </div>
