--- a/demo/index.html
+++ b/demo/index.html
@@ -758,12 +758,12 @@
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD89pzZjSgZCdOv_STBBR6jSWaObqwGNRM"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD89pzZjSgZCdOv_STBBR6jSWaObqwGNRM"></script> -->
 
     <!-- init -->
 
     <script src="./js/main.js"></script>
-    <script src="./js/map.js"></script>
+    <!-- <script src="./js/map.js"></script> -->
     <script type="text/javascript" src="./js/handleFoldClick.js"></script>
 </body>
 
