--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/fold.css">
   <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/slide.css">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/web-end.css">
   <title>Bizplus</title>
@@ -183,59 +184,26 @@
   <!-- main-content -->
   <div class="main-content">
     <!-- carousel -->
-    <div class="view-slide">
-      <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel" data-slide-to="0" class=""></li>
-          <li data-target="#carousel" data-slide-to="1" class=""></li>
-          <li data-target="#carousel" data-slide-to="2" class="active"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./imgs/business/354-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
-            <div class="carousel-caption ">
-              <!-- areaTxt -->
-              <h1 class="visual_title caps"><b data-i18n-text="carousel_1_title"></b>
-              </h1>
-              <p class="visual_text" data-i18n-text="carousel_1_content">
-              </p>
-              <!-- areaTxt -->
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./imgs/business/418-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
-            <div class="carousel-caption">
-              <!-- areaTxt -->
-              <h1 class="visual_title caps"><b data-i18n-text="carousel_2_title"></b>
-              </h1>
-              <p class="visual_text" data-i18n-text="carousel_2_content">
-              </p>
-              <!-- areaTxt -->
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./imgs/business/857-1920x968.jpg" class="d-block w-100 carousel-img" alt="carousel-img">
-            <div class="carousel-caption">
-              <!-- areaTxt -->
-              <h1 class="visual_title caps"><b data-i18n-text="carousel_3_title"></b>
-              </h1>
-              <p class="visual_text" data-i18n-text="carousel_3_content">
-              </p>
-              <!-- areaTxt -->
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+    <div id="slideshow">
+      <!-- 插入轮播的图片们 -->
+      <img class="active" src="./imgs/business/354-1920x968.jpg" />
+      <img src="./imgs/business/418-1920x968.jpg" />
+      <img src="./imgs/business/857-1920x968.jpg" />
+      <!-- 插入轮播的页码们 -->
+      <div>
+        <span class="active" name="0"></span>
+        <span name="1"></span>
+        <span name="2"></span>
       </div>
-
+      <!--插入左边和右边的按钮框-->
+      <p class="left">&lt;</p>
+      <p class="right">&gt;</p>
+      <!-- 插入图片的描述们 -->
+      <h6 class="active">这是第一幅图片哈哈哈</h6>
+      <h6>这是第二幅图片咩</h6>
+      <h6>到第三幅了！</h6>
     </div>
+
     <!-- carousal -->
     <!-- about us -->
     <div class="about-us">
@@ -645,15 +613,6 @@
           <div id="map"></div>
         </div>
       </div>
-
-      <div class="map fc">
-        <div class="map-inner">
-
-          <div class="map-content z100">
-
-          </div>
-        </div>
-      </div>
       <!-- double footer -->
       <footer class="footer fc">
         <div class="footer-inner rel  ">
@@ -758,12 +717,13 @@
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD89pzZjSgZCdOv_STBBR6jSWaObqwGNRM"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD89pzZjSgZCdOv_STBBR6jSWaObqwGNRM"></script>
 
     <!-- init -->
 
     <script src="./js/main.js"></script>
-    <!-- <script src="./js/map.js"></script> -->
+    <script src="./js/slide.js"></script>
+    <script src="./js/map.js"></script>
     <script type="text/javascript" src="./js/handleFoldClick.js"></script>
 </body>
 
