--- a/demo/index.html
+++ b/demo/index.html
@@ -168,7 +168,7 @@
         <div class=""><button id="btn-search"><i class="fas fa-search"></i></button></div>
       </div>
       <div class="nav-lan second-nav-lan">
-        <div data-i18n-text-left="language">
+        <div data-i18n-text-left="language" class="lan">
           <i class="fas fa-angle-down svg-down"></i>
         </div>
         <ul class="lan-select">
