--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,8 @@
               <li><a href="#" data-i18n-text-right="privacy_policy"><i class="fas fa-arrow-right"></i></a></li>
               <li><a href="#" data-i18n-text-right="organizational_chart"><i class="fas fa-arrow-right"></i></a></li>
               <li><a href="#" data-i18n-text-right="access"><i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="#" data-i18n-text-right="company_culture"><i class="fas fa-arrow-right"></i></a></li>
+            
             </ul>
           </div>
           <div class="menu-item caps expand">
@@ -59,6 +61,7 @@
             <ul>
               <li><a href="#" data-i18n-text-right="business_summary"><i class="fas fa-arrow-right"></i></a></li>
               <li><a href="#" data-i18n-text-right="quality_control"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="project_management"><i class="fas fa-arrow-right"></i></a></li>
               <li><a href="#" data-i18n-text-right="development_language_and_environment"><i
                     class="fas fa-arrow-right"></i></a></li>
               <li><a href="#" data-i18n-text-right="foreign_temporary_staffing_business"><i
@@ -69,11 +72,11 @@
             </ul>
           </div>
           <div class="menu-item caps expand">
-            <span data-i18n-text-left="company_culture">
+            <span data-i18n-text-left="welfare">
               <i class="fas fa-angle-down svg-down"></i>
             </span>
             <ul>
-              <li><a href="#" data-i18n-text-right="welfare"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="education"><i class="fas fa-arrow-right"></i></a></li>
               <li><a href="#" data-i18n-text-right="leisure_and_entertainment"><i class="fas fa-arrow-right"></i></a>
               </li>
               <li><a href="#" data-i18n-text-right="medical_insurance"><i class="fas fa-arrow-right"></i></a></li>
@@ -133,6 +136,7 @@
       <ul>
         <li><a href="#" data-i18n-text-right="business_summary"><i class="fas fa-arrow-right"></i></a></li>
         <li><a href="#" data-i18n-text-right="quality_control"><i class="fas fa-arrow-right"></i></a></li>
+         <li><a href="#" data-i18n-text-right="project_management"><i class="fas fa-arrow-right"></i></a></li>
         <li><a href="#" data-i18n-text-right="development_language_and_environment"><i
               class="fas fa-arrow-right"></i></a></li>
         <li><a href="#" data-i18n-text-right="foreign_temporary_staffing_business"><i
