菜单字段改变

--- a/demo/index.html
+++ b/demo/index.html
@@ -127,6 +127,8 @@
         <li><a href="#" data-i18n-text-right="privacy_policy"><i class="fas fa-arrow-right"></i></a></li>
         <li><a href="#" data-i18n-text-right="organizational_chart"><i class="fas fa-arrow-right"></i></a></li>
         <li><a href="#" data-i18n-text-right="access"><i class="fas fa-arrow-right"></i></a></li>
+      <li><a href="#" data-i18n-text-right="company_culture"><i class="fas fa-arrow-right"></i></a></li>
+            
       </ul>
     </div>
     <div class="second-menu-item caps expand">
@@ -147,14 +149,14 @@
       </ul>
     </div>
     <div class="second-menu-item caps expand">
-      <span data-i18n-text-left="company_culture">
+      <span data-i18n-text-left="welfare">
         <i class="fas fa-angle-down svg-down"></i>
       </span>
       <ul>
-        <li><a href="#" data-i18n-text-right="welfare"><i class="fas fa-arrow-right"></i></a></li>
-        <li><a href="#" data-i18n-text-right="leisure_and_entertainment"><i class="fas fa-arrow-right"></i></a>
-        </li>
-        <li><a href="#" data-i18n-text-right="medical_insurance"><i class="fas fa-arrow-right"></i></a></li>
+        <li><a href="#" data-i18n-text-right="education"><i class="fas fa-arrow-right"></i></a></li>
+              <li><a href="#" data-i18n-text-right="leisure_and_entertainment"><i class="fas fa-arrow-right"></i></a>
+              </li>
+              <li><a href="#" data-i18n-text-right="medical_insurance"><i class="fas fa-arrow-right"></i></a></li>
       </ul>
     </div>
     <div class="second-menu-item caps" data-i18n-text="recruitment_information"></div>
